@@ -37,6 +37,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectReader;
 import com.unboundid.scim2.common.messages.ListResponse;
+import com.unboundid.scim2.common.types.GroupResource;
 import com.unboundid.scim2.common.types.ResourceTypeResource;
 import com.unboundid.scim2.common.types.UserResource;
 import com.unboundid.scim2.common.utils.JsonUtils;
@@ -66,7 +67,10 @@ public class ListResponseTestCase
         "itemsPerPage": 1,
         "startIndex": 1,
         "Resources": [
-          "stringValue"
+          {
+            "schemas": [ "urn:ietf:params:scim:schemas:core:2.0:User" ],
+            "userName": "Frieren"
+          }
         ]
       }""";
 
@@ -117,12 +121,67 @@ public class ListResponseTestCase
             JsonUtils.getObjectReader().readTree(SINGLE_ELEMENT_LIST_RESPONSE)
                     .toString();
 
-    List<String> resources = Collections.singletonList("stringValue");
-    ListResponse<String> listResponse = new ListResponse<>(2, resources, 1, 1);
+    var list = List.of(new UserResource().setUserName("Frieren"));
+    ListResponse<UserResource> listResponse = new ListResponse<>(2, list, 1, 1);
     String listResponseJSON =
             JsonUtils.getObjectWriter().writeValueAsString(listResponse);
 
     assertEquals(listResponseJSON, expectedJSON);
+  }
+
+
+  /**
+   * Test the other utility constructors.
+   */
+  @Test
+  public void testAlternateConstructors()
+  {
+    // This constructor should set totalResults and Resources, and leave all
+    // other fields null.
+    var group = new GroupResource().setDisplayName("Frieren's Party");
+    ListResponse<GroupResource> collection = new ListResponse<>(List.of(group));
+
+    assertThat(collection.getResources())
+        .hasSize(1)
+        .containsExactly(group);
+    assertThat(collection.getTotalResults()).isEqualTo(1);
+    assertThat(collection.getStartIndex()).isNull();
+    assertThat(collection.getItemsPerPage()).isNull();
+    assertThat(collection.getPreviousCursor()).isNull();
+    assertThat(collection.getNextCursor()).isNull();
+
+    // Use the original constructor from before RFC 9865 was supported.
+    ListResponse<GroupResource> groupResponse =
+        new ListResponse<>(1, List.of(group), null, null);
+    assertThat(groupResponse).isEqualTo(collection);
+
+    // This constructor is primarily used for SCIM services that only support
+    // cursor-based pagination and do not need to return the previous cursor.
+    ListResponse<GroupResource> cursorResponse =
+        new ListResponse<>(2, "cursorValue", 1, List.of(group));
+
+    assertThat(cursorResponse.getResources())
+        .hasSize(1)
+        .containsExactly(group);
+    assertThat(cursorResponse.getTotalResults()).isEqualTo(2);
+    assertThat(cursorResponse.getStartIndex()).isNull();
+    assertThat(cursorResponse.getItemsPerPage()).isEqualTo(1);
+    assertThat(cursorResponse.getPreviousCursor()).isNull();
+    assertThat(cursorResponse.getNextCursor()).isEqualTo("cursorValue");
+
+    // Create a "cursor" response that does not return a "nextCursor" value
+    // since all results have been returned.
+    ListResponse<GroupResource> allReturnedResponse =
+        new ListResponse<>(1, null, null, List.of(group));
+
+    assertThat(allReturnedResponse.getResources())
+        .hasSize(1)
+        .containsExactly(group);
+    assertThat(allReturnedResponse.getTotalResults()).isEqualTo(1);
+    assertThat(allReturnedResponse.getStartIndex()).isNull();
+    assertThat(allReturnedResponse.getItemsPerPage()).isNull();
+    assertThat(allReturnedResponse.getPreviousCursor()).isNull();
+    assertThat(allReturnedResponse.getNextCursor()).isNull();
   }
 
 
@@ -160,6 +219,8 @@ public class ListResponseTestCase
     assertThat(response.getTotalResults()).isEqualTo(2);
     assertThat(response.getItemsPerPage()).isEqualTo(2);
     assertThat(response.getStartIndex()).isNull();
+    assertThat(response.getPreviousCursor()).isNull();
+    assertThat(response.getNextCursor()).isNull();
 
     // The use of a TypeReference object must result in UserResource objects
     // in the Resources list. Otherwise, attempts to use these objects will
@@ -269,6 +330,8 @@ public class ListResponseTestCase
     assertThat(object.getTotalResults()).isEqualTo(0);
     assertThat(object.getItemsPerPage()).isEqualTo(0);
     assertThat(object.getStartIndex()).isNull();
+    assertThat(object.getPreviousCursor()).isNull();
+    assertThat(object.getNextCursor()).isNull();
     assertThat(object.getResources())
         .isNotNull()
         .isEmpty();
@@ -284,6 +347,8 @@ public class ListResponseTestCase
     assertThat(small.getTotalResults()).isEqualTo(0);
     assertThat(small.getItemsPerPage()).isNull();
     assertThat(small.getStartIndex()).isNull();
+    assertThat(small.getPreviousCursor()).isNull();
+    assertThat(small.getNextCursor()).isNull();
     assertThat(small.getResources())
         .isNotNull()
         .isEmpty();
@@ -299,6 +364,8 @@ public class ListResponseTestCase
     assertThat(response.getTotalResults()).isEqualTo(0);
     assertThat(response.getItemsPerPage()).isNull();
     assertThat(response.getStartIndex()).isNull();
+    assertThat(response.getPreviousCursor()).isNull();
+    assertThat(response.getNextCursor()).isNull();
     assertThat(response.getResources())
         .isNotNull()
         .isEmpty();
@@ -328,6 +395,8 @@ public class ListResponseTestCase
     assertThat(response2.getTotalResults()).isEqualTo(100);
     assertThat(response2.getItemsPerPage()).isEqualTo(0);
     assertThat(response2.getStartIndex()).isNull();
+    assertThat(response2.getPreviousCursor()).isNull();
+    assertThat(response2.getNextCursor()).isNull();
     assertThat(response2.getResources())
         .isNotNull()
         .isEmpty();
@@ -346,8 +415,113 @@ public class ListResponseTestCase
     assertThat(response3.getTotalResults()).isEqualTo(100);
     assertThat(response3.getItemsPerPage()).isEqualTo(0);
     assertThat(response3.getStartIndex()).isNull();
+    assertThat(response3.getPreviousCursor()).isNull();
+    assertThat(response3.getNextCursor()).isNull();
     assertThat(response3.getResources())
         .isNotNull()
         .isEmpty();
+  }
+
+  /**
+   * Validates support for cursor-based pagination workflows as defined by
+   * RFC 9865.
+   */
+  @Test
+  public void testCursorPagination() throws Exception
+  {
+    String json = """
+        {
+          "schemas": [ "urn:ietf:params:scim:api:messages:2.0:ListResponse" ],
+          "totalResults": 2,
+          "itemsPerPage": 2,
+          "previousCursor": "ze7L30kMiiLX6x",
+          "nextCursor": "YkU3OF86Pz0rGv",
+          "Resources": [ {
+            "schemas": [ "urn:ietf:params:scim:schemas:core:2.0:User" ],
+            "id": "226537a7-90bb-4644-9bd0-e2c998e00d66",
+            "userName": "Frieren"
+          }, {
+            "schemas": [ "urn:ietf:params:scim:schemas:core:2.0:User" ],
+            "id": "0fc9de62-645d-4655-9263-1b1a1d6dde13",
+            "userName": "Fern"
+          } ]
+        }""";
+
+    // Convert the string to a Java object as described by ListResponse's
+    // class-level Javadoc.
+    ListResponse<UserResource> response = JsonUtils.getObjectReader()
+        .forType(new TypeReference<ListResponse<UserResource>>(){})
+        .readValue(json);
+
+    // Ensure the fields were converted correctly.
+    assertThat(response.getTotalResults()).isEqualTo(2);
+    assertThat(response.getItemsPerPage()).isEqualTo(2);
+    assertThat(response.getStartIndex()).isNull();
+    assertThat(response.getPreviousCursor()).isEqualTo("ze7L30kMiiLX6x");
+    assertThat(response.getNextCursor()).isEqualTo("YkU3OF86Pz0rGv");
+
+    // Ensure it is possible to construct the same object.
+    UserResource frieren = new UserResource().setUserName("Frieren");
+    frieren.setId("226537a7-90bb-4644-9bd0-e2c998e00d66");
+    UserResource fern = new UserResource().setUserName("Fern");
+    fern.setId("0fc9de62-645d-4655-9263-1b1a1d6dde13");
+
+    ListResponse<UserResource> constructed = new ListResponse<>(
+        2, null, 2, "ze7L30kMiiLX6x", "YkU3OF86Pz0rGv", List.of(frieren, fern));
+    assertThat(constructed).isEqualTo(response);
+
+    // The constructed object should be serialized into a consistent form, with
+    // an expected order for the attributes. First reformat the JSON into a
+    // non-pretty string.
+    final String expectedJSON = JsonUtils.getObjectReader()
+        .readTree(json).toString();
+    String serial = JsonUtils.getObjectWriter().writeValueAsString(response);
+    assertThat(serial).isEqualTo(expectedJSON);
+  }
+
+  /**
+   * Tests for {@code equals()}.
+   */
+  @SuppressWarnings("all")
+  @Test
+  public void testEquals()
+  {
+    ListResponse<UserResource> list =
+        new ListResponse<>(List.of(new UserResource()));
+    assertThat(list.equals(list)).isTrue();
+    assertThat(list.equals(null)).isFalse();
+    assertThat(list.equals(new UserResource())).isFalse();
+
+    // Create a ListResponse with an unequal superclass value, even though list
+    // responses do not have an "id".
+    ListResponse<UserResource> unequalSuperclass =
+        new ListResponse<>(List.of(new UserResource()));
+    unequalSuperclass.setId("undefined");
+    assertThat(list.equals(unequalSuperclass)).isFalse();
+
+    var totalResultsValue = new ListResponse<>(
+        1000, null, null, null, null, List.of(new UserResource()));
+    assertThat(list.equals(totalResultsValue)).isFalse();
+    assertThat(list.hashCode()).isNotEqualTo(totalResultsValue.hashCode());
+    var startIndexValue = new ListResponse<>(
+        1, 1, null, null, null, List.of(new UserResource()));
+    assertThat(list.equals(startIndexValue)).isFalse();
+    assertThat(list.hashCode()).isNotEqualTo(startIndexValue.hashCode());
+    var itemsPerPageValue = new ListResponse<>(
+        1, null, 1, null, null, List.of(new UserResource()));
+    assertThat(list.equals(itemsPerPageValue)).isFalse();
+    assertThat(list.hashCode()).isNotEqualTo(itemsPerPageValue.hashCode());
+    var prevCursorValue = new ListResponse<>(
+        1, null, null, "prev", null, List.of(new UserResource()));
+    assertThat(list.equals(prevCursorValue)).isFalse();
+    assertThat(list.hashCode()).isNotEqualTo(prevCursorValue.hashCode());
+    var nextCursorValue = new ListResponse<>(
+        1, null, null, null, "next", List.of(new UserResource()));
+    assertThat(list.equals(nextCursorValue)).isFalse();
+    assertThat(list.hashCode()).isNotEqualTo(nextCursorValue.hashCode());
+    var resourcesValue = new ListResponse<>(
+        1, null, null, null, null, List.of(new UserResource().setTitle("U.")));
+    assertThat(list.equals(resourcesValue)).isFalse();
+    assertThat(list.hashCode()).isNotEqualTo(resourcesValue.hashCode());
   }
 }
